tests/org.eclipse.php.core.tests/src/org/eclipse/php/core/tests/errors/PHP54ErrorReportingTests#PHP54ErrorReportingTests(String).mjava
	public PHP54ErrorReportingTests(String description) {
		super(description);
	}

